# DAFT-Diy-Actuator-Firmware-and-Test-platform-

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
arduino/ESP32C6_TMC2209_Controller/: ESP32C6_TMC2209_Controller.ino
firmware/: CMakeLists.txt  platformio.ini
firmware/build-mingw/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
firmware/include/daft/: actuator.hpp  build_info.hpp  config.hpp  config_store.hpp  faults.hpp  platform.hpp  protocol_v2.hpp
firmware/scripts/: build_metadata.py
firmware/src/: actuator.cpp  cobs.cpp  config_store.cpp  config_validation.cpp  crc.cpp  protocol_v2.cpp
firmware/tests/: test_core.cpp
protocol/: golden_frames.txt
python/: daft_protocol.py  requirements.txt  stepper_control_dpg.py  stepper_control_ui.py
python/apps/: __init__.py  cli.py  dpg_commissioning_gui.py
python/daft_protocol/: __init__.py  client.py  codec.py  config.py  messages.py  transport_serial.py
python/tests/: test_protocol.py
